--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
     <string name="app_name">Counter</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_settings">Settings</string>
     <string name="action_edit">Edit</string>
+    <string name="action_settings">Settings</string>
+    <string name="change_color">Change color</string>
+    <string name="count">Count</string>
+    <string name="decreasing">Decreasing</string>
+    <string name="increasing">Increasing</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="no_counters">You have no counters!</string>
+    <string name="no_counters_add">Add a counter item +</string>
+    <string name="notes">Notes</string>
+    <string name="title">Title</string>
 </resources>
