handle counter deletion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="change_color">Change color</string>
     <string name="count">Count</string>
     <string name="decreasing">Decreasing</string>
+    <string name="delete">Delete</string>
     <string name="increasing">Increasing</string>
     <string name="name">Name</string>
     <string name="nav_header_desc">Navigation header</string>
