--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="add_counter">Add a counter</string>
+    <string name="add_counter_group">Add a counter group</string>
     <string name="app_name">Counter</string>
     <string name="action_edit">Edit</string>
     <string name="action_settings">Settings</string>
