--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
+    <string name="add">Add</string>
     <string name="add_counter">Add a counter</string>
     <string name="add_counter_group">Add a counter group</string>
+    <string name="add_counter_group_dialog_title">New counter group</string>
+    <string name="add_counter_group_dialog_message">Entrer the name of the group</string>
     <string name="app_name">Counter</string>
     <string name="action_edit">Edit</string>
     <string name="action_settings">Settings</string>
+    <string name="cancel">Cancel</string>
     <string name="change_color">Change color</string>
     <string name="count">Count</string>
     <string name="decreasing">Decreasing</string>
