--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,10 @@
     <string name="add_counter_group_dialog_message">Entrer the name of the group</string>
     <string name="all_counters">All counters</string>
     <string name="app_name">Counter</string>
-    <string name="action_edit">Edit</string>
-    <string name="action_settings">Settings</string>
+    <string name="duplicate">Duplicate</string>
+    <string name="edit">Edit</string>
+    <string name="full_screen">Full screen</string>
+    <string name="settings">Settings</string>
     <string name="cancel">Cancel</string>
     <string name="change_color">Change color</string>
     <string name="count">Count</string>
@@ -27,5 +29,7 @@
     <string name="no_statistics">You have no statistics</string>
     <string name="notes">Notes</string>
     <string name="objective">Objective</string>
+    <string name="reset">Reset</string>
     <string name="simple_counter">Simple counter</string>
+    <string name="statistics">Statistics</string>
 </resources>
