--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="about">About</string>
     <string name="add">Add</string>
     <string name="add_counter">Add a counter</string>
     <string name="add_counter_group">Add a counter group</string>
@@ -6,10 +7,14 @@
     <string name="add_counter_group_dialog_message">Entrer the name of the group</string>
     <string name="all_counters">All counters</string>
     <string name="app_name">Counter</string>
+    <string name="application">Application</string>
     <string name="ascending">Ascending</string>
+    <string name="communicate">Communicate</string>
+    <string name="contact_us">Contact us</string>
     <string name="direction">Direction</string>
     <string name="duplicate">Duplicate</string>
     <string name="edit">Edit</string>
+    <string name="email_warning">Please install an email application to contact us</string>
     <string name="full_screen">Full screen</string>
     <string name="settings">Settings</string>
     <string name="cancel">Cancel</string>
@@ -20,14 +25,12 @@
     <string name="descending">Descending</string>
     <string name="delete">Delete</string>
     <string name="delete_all_counters">Delete all counters</string>
+    <string name="evaluate">Evaluate</string>
     <string name="groups">Groups</string>
     <string name="increasing">Increasing</string>
     <string name="limit">Limit</string>
     <string name="name">Name</string>
     <string name="name_required_warning">Name is required</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_title">Android Studio</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="no_counters">You have no counters</string>
@@ -38,9 +41,10 @@
     <string name="rename">Rename</string>
     <string name="reset">Reset</string>
     <string name="reset_all_counters">Reset all counters</string>
+    <string name="share">Share</string>
     <string name="simple_counter">Simple counter</string>
     <string name="statistics">Statistics</string>
+    <string name="step">Step</string>
     <string name="select_group">Select a group</string>
-    <string name="touch_or_leave_empty">Touch or leave empty</string>
     <string name="validate">Validate</string>
 </resources>
