--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="about">About</string>
     <string name="add">Add</string>
     <string name="add_counter">Add a counter</string>
-    <string name="add_counter_group">Add a counter group</string>
-    <string name="add_counter_group_dialog_title">New counter group</string>
-    <string name="add_counter_group_dialog_message">Entrer the name of the group</string>
+    <string name="add_folder">Add a folder</string>
+    <string name="add_folder_dialog_title">New folder</string>
+    <string name="add_folder_dialog_message">Entrer the name of the folder</string>
     <string name="all_counters">All counters</string>
     <string name="app_name">Counter</string>
     <string name="application">Application</string>
@@ -22,7 +22,6 @@
     <string name="cancel">Cancel</string>
     <string name="change_color">Change color</string>
     <string name="count">Count</string>
-    <string name="counter_groups">Counter groups</string>
     <string name="decreasing">Decreasing</string>
     <string name="descending">Descending</string>
     <string name="delete">Delete</string>
@@ -30,7 +29,6 @@
     <string name="evaluate">Evaluate</string>
     <string name="folder">Folder</string>
     <string name="folders">Folders</string>
-    <string name="groups">Groups</string>
     <string name="home">Home</string>
     <string name="increasing">Increasing</string>
     <string name="limit">Limit</string>
@@ -50,6 +48,6 @@
     <string name="simple_counter">Simple counter</string>
     <string name="statistics">Statistics</string>
     <string name="step">Step</string>
-    <string name="select_group">Select a group</string>
+    <string name="select_folder">Select a folder</string>
     <string name="validate">Validate</string>
 </resources>
