add warning dialog when delete or reset foldrt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,25 +14,27 @@
     <string name="counter">Counter</string>
     <string name="counter_list">List of counters</string>
     <string name="counters">Counters</string>
+    <string name="delete_all_counters_warning">This action will delete all counters in folder. Are you sure?</string>
+    <string name="delete_folder_warning">This action will delete this folder and all its counters. Are you sure?</string>
     <string name="direction">Direction</string>
     <string name="duplicate">Duplicate</string>
     <string name="edit">Edit</string>
     <string name="email_warning">Please install an email application to contact us</string>
     <string name="folder_list">List of folders</string>
     <string name="full_screen">Full screen</string>
-    <string name="settings">Settings</string>
     <string name="cancel">Cancel</string>
     <string name="change_color">Change color</string>
     <string name="count">Count</string>
     <string name="decreasing">Decreasing</string>
-    <string name="descending">Descending</string>
     <string name="delete">Delete</string>
+    <string name="descending">Descending</string>
     <string name="delete_all_counters">Delete all counters</string>
     <string name="evaluate">Evaluate</string>
     <string name="folder">Folder</string>
     <string name="folders">Folders</string>
     <string name="home">Home</string>
     <string name="increasing">Increasing</string>
+    <string name="information">Information</string>
     <string name="limit">Limit</string>
     <string name="name">Name</string>
     <string name="name_required_warning">Name is required</string>
@@ -43,13 +45,17 @@
     <string name="no_statistics">You have no statistics</string>
     <string name="notes">Notes</string>
     <string name="objective">Objective</string>
+    <string name="ok">OK</string>
     <string name="rename">Rename</string>
     <string name="reset">Reset</string>
     <string name="reset_all_counters">Reset all counters</string>
+    <string name="reset_all_counters_warning">This action will reset all counters in folder. Are you sure?</string>
+    <string name="settings">Settings</string>
     <string name="share">Share</string>
     <string name="simple_counter">Simple counter</string>
     <string name="statistics">Statistics</string>
     <string name="step">Step</string>
     <string name="select_folder">Select a folder</string>
     <string name="validate">Validate</string>
+    <string name="warning">Warning</string>
 </resources>
