--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="change_color">Change color</string>
     <string name="count">Count</string>
     <string name="decreasing">Decreasing</string>
+    <string name="decrement_statistics">Decrement statistics</string>
     <string name="delete">Delete</string>
     <string name="descending">Descending</string>
     <string name="delete_all_counters">Delete all counters</string>
@@ -34,6 +35,7 @@
     <string name="folders">Folders</string>
     <string name="home">Home</string>
     <string name="increasing">Increasing</string>
+    <string name="increment_statistics">Increment statistics</string>
     <string name="information">Information</string>
     <string name="limit">Limit</string>
     <string name="name">Name</string>
@@ -51,6 +53,7 @@
     <string name="reset">Reset</string>
     <string name="reset_all_counters">Reset all counters</string>
     <string name="reset_all_counters_warning">This action will reset all counters in this folder. Are you sure?</string>
+    <string name="reset_statistics">Reset statistics</string>
     <string name="settings">Settings</string>
     <string name="share">Share</string>
     <string name="simple_counter">Simple counter</string>
