Improve counter statistics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,7 @@
     <string name="select_folder">Select a folder</string>
     <string name="validate">Validate</string>
     <string name="warning">Warning</string>
+    <string name="date">Date</string>
+    <string name="type">Type</string>
+    <string name="amount">Amount</string>
 </resources>
