Create settings UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,8 +64,41 @@
     <string name="step">Step</string>
     <string name="select_folder">Select a folder</string>
     <string name="validate">Validate</string>
+    <string name="version">Version</string>
     <string name="warning">Warning</string>
     <string name="date">Date</string>
     <string name="type">Type</string>
     <string name="amount">Amount</string>
+    <string name="pref_header_controls">Controls</string>
+    <string name="key_activate_sound">SHARED_PREF_ACTIVATE_SOUND</string>
+    <string name="summary_activate_sound">Play sounds on increment, decrement and reset</string>
+    <string name="title_activate_sound">Activate sounds</string>
+    <string name="key_activate_vibrator">SHARED_PREF_ACTIVATE_VIBRATOR</string>
+    <string name="summary_activate_vibrator">Vibrate on increment, decrement and reset</string>
+    <string name="title_activate_vibrator">Activate vibrator</string>
+    <string name="pref_header_display">Display</string>
+    <string name="key_count_volume_buttons">SHARED_PREF_VOLUME_BUTTON</string>
+    <string name="summary_count_volume_buttons">Count when the device\'s volume button is pressed</string>
+    <string name="title_count_volume_buttons">Use volume keys to count</string>
+    <string name="key_screen_always_on">SHARED_PREF_ALWAYS_ON</string>
+    <string name="summary_screen_always_on">Prevent device from sleeping while running in the foreground</string>
+    <string name="title_screen_always_on">Keep screen on</string>
+    <string name="summary_theme_and_color">Theme and colors</string>
+    <string name="title_theme_and_color">Customize user interface theme and colors</string>
+    <string name="pref_header_advanced">Advanced</string>
+    <string name="summary_delete_all_counters">Delete all counters, folders and statistics</string>
+    <string name="title_delete_all_counters">Delete all counters</string>
+    <string name="summary_export_data">Export your data to a file. Requires storage permission on Android 6+</string>
+    <string name="title_export_data">Export data</string>
+    <string name="summary_import_data">Reset the app with data from exported file. Requires storage permission on Android 6+</string>
+    <string name="title_import_data">Import data</string>
+    <string name="pref_header_about">@string/about</string>
+    <string name="summary_about">This free app is a non private, non-commercial and leisure project.</string>
+    <string name="title_version">@string/version</string>
+    <string name="title_contact_us">@string/contact_us</string>
+    <string name="summary_contact_us">Any suggestion or bug? Please, let us know!</string>
+    <string name="title_tutorial">Tutorial</string>
+    <string name="summary_tutorial">See all app\'s features in a quick tutorial</string>
+    <string name="privacy_policy">Privacy policy</string>
+    <string name="title_terms"><![CDATA[Terms & Conditions]]></string>
 </resources>
