--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,10 +127,15 @@
     <string name="title_theme_and_color">Customize user interface theme and colors</string>
     <string name="title_tutorial">Tutorial</string>
     <string name="title_version">@string/version</string>
-    <string name="tutorial_description_slide_1">Use simple infinite counter from home screen</string>
-    <string name="tutorial_description_slide_2">Create your own counters from counter list screen</string>
-    <string name="tutorial_description_slide_3">Create folders to organize your counters from folder list screen</string>
-    <string name="tutorial_description_slide_4">Keep track of your activities with advanced statistics</string>
+    <string name="tutorial_slide_1_description">Use simple infinite counter from home screen</string>
+    <string name="tutorial_slide_1_tooltip_1">Tap progress bar to increase counter</string>
+    <string name="tutorial_slide_1_tooltip_2">Tap decrease button to decrease counter</string>
+    <string name="tutorial_slide_1_tooltip_3">Tap reset icon in navbar to reset counter</string>
+    <string name="tutorial_slide_2_description">Create your own counters from counter list screen</string>
+    <string name="tutorial_slide_2_tooltip_1">Tap plus button to create counter</string>
+    <string name="tutorial_slide_3_description">Create folders to organize your counters from folder list screen</string>
+    <string name="tutorial_slide_3_tooltip_1">Tap plus button to create folder</string>
+    <string name="tutorial_slide_4_description">Keep track of your activities with advanced statistics</string>
     <string name="tutorial_image">Tutorial\'s image</string>
     <string name="type">Type</string>
     <string name="validate">Validate</string>
