--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,7 +6,7 @@
     <string name="add_folder_dialog_message">Entrer the name of the folder</string>
     <string name="add_folder_dialog_title">New folder</string>
     <string name="all_counters">All counters</string>
-    <string name="amount">Amount</string>
+    <string name="amount">Total</string>
     <string name="app_name" translatable="false">Counter++</string>
     <string name="application">Application</string>
     <string name="ascending">Ascending</string>
@@ -19,13 +19,13 @@
     <string name="communicate">Communicate</string>
     <string name="contact_us">Contact us</string>
     <string name="count">Count</string>
-    <string name="counter">Counter</string>
-    <string name="counter_list">List of counters</string>
+    <string name="counter">Compteur</string>
+    <string name="counter_list">Liste des compteurs</string>
     <string name="counter_name">Counter name</string>
-    <string name="counters">Counters</string>
+    <string name="counters">Compteurs</string>
     <string name="date">Date</string>
     <string name="decreasing">Decreasing</string>
-    <string name="decrement">Decrement</string>
+    <string name="decrement">Décrément</string>
     <string name="decrement_statistics">Decrement statistics</string>
     <string name="delete">Delete</string>
     <string name="delete_all_counters">Delete all counters</string>
@@ -41,15 +41,15 @@
     <string name="export_data_error_message">Error when exporting the data</string>
     <string name="export_data_success_message">The data have been exported to file %s</string>
     <string name="folder">Folder</string>
-    <string name="folder_list">List of folders</string>
-    <string name="folders">Folders</string>
+    <string name="folder_list">Liste des dossiers</string>
+    <string name="folders">Dossiers</string>
     <string name="full_screen">Full screen</string>
-    <string name="home">Home</string>
+    <string name="home">Accueil</string>
     <string name="import_data_dialog_message">Data import in progress</string>
     <string name="import_data_failure_message">Error when importing data</string>
     <string name="import_data_success_message">Data has been successfully imported</string>
     <string name="increasing">Increasing</string>
-    <string name="increment">Increment</string>
+    <string name="increment">Incrément</string>
     <string name="increment_statistics">Increment statistics</string>
     <string name="infinite">Infinite</string>
     <string name="information">Information</string>
@@ -72,7 +72,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="next">Next</string>
-    <string name="no_counters">No counters</string>
+    <string name="no_counters">Aucun compteur</string>
     <string name="no_counters_add">Add a counter item +</string>
     <string name="no_folders">No folders</string>
     <string name="no_statistics">No statistics</string>
@@ -85,19 +85,19 @@
     <string name="pref_header_display">Display</string>
     <string name="privacy_policy">Privacy policy</string>
     <string name="rename">Rename</string>
-    <string name="reset">Reset</string>
+    <string name="reset">Réinitialisation</string>
     <string name="reset_all_counters">Reset all counters</string>
     <string name="reset_all_counters_warning">This action will reset all counters in this folder. Are you sure?</string>
     <string name="reset_all_data_success_message">All data have been successfully reset</string>
     <string name="reset_data_warning">This action will delete all data. Are you sure?</string>
     <string name="reset_statistics">Reset statistics</string>
     <string name="select_folder">Select a folder</string>
-    <string name="settings">Settings</string>
+    <string name="settings">Réglages</string>
     <string name="share">Share</string>
     <string name="simple_counter">Simple counter</string>
     <string name="skip">Skip</string>
     <string name="start">Start</string>
-    <string name="statistics">Statistics</string>
+    <string name="statistics">Statistiques</string>
     <string name="step">Step</string>
     <string name="storage_permission_warning">To export data permission to write in external storage is required. Please go to settings and enable write in external storage.</string>
     <string name="summary_about">This free app is a non private, non-commercial and leisure project</string>
@@ -127,15 +127,15 @@
     <string name="title_theme_and_color">Customize user interface theme and colors</string>
     <string name="title_tutorial">Tutorial</string>
     <string name="title_version">@string/version</string>
-    <string name="tutorial_slide_1_description">Use simple infinite counter from home screen</string>
-    <string name="tutorial_slide_1_tooltip_1">Tap progress bar to increase counter</string>
-    <string name="tutorial_slide_1_tooltip_2">Tap decrease button to decrease counter</string>
-    <string name="tutorial_slide_1_tooltip_3">Tap reset icon in navbar to reset counter</string>
-    <string name="tutorial_slide_2_description">Create your own counters from counter list screen</string>
-    <string name="tutorial_slide_2_tooltip_1">Tap plus button to create counter</string>
-    <string name="tutorial_slide_3_description">Create folders to organize your counters from folder list screen</string>
-    <string name="tutorial_slide_3_tooltip_1">Tap plus button to create folder</string>
-    <string name="tutorial_slide_4_description">Keep track of your activities with advanced statistics</string>
+    <string name="tutorial_slide_1_description">Utiliser un simple compteur infini depuis de l\'écran d\'accueil</string>
+    <string name="tutorial_slide_1_tooltip_1">Tapez sur la barre de progression pour augmenter le compteur</string>
+    <string name="tutorial_slide_1_tooltip_2">Tapez sur le bouton pour diminuer le compteur</string>
+    <string name="tutorial_slide_1_tooltip_3">Tapez sur l\'icône dans la barre de navigation pour réinitialiser le compteur</string>
+    <string name="tutorial_slide_2_description">Créez vos propres compteurs à partir de l\'écran de liste des compteurs</string>
+    <string name="tutorial_slide_2_tooltip_1">Tapez sur la touche plus pour créer un compteur</string>
+    <string name="tutorial_slide_3_description">Créez des dossiers pour organiser vos compteurs à partir de l\'écran de la liste des dossiers</string>
+    <string name="tutorial_slide_3_tooltip_1">Tapez sur le bouton plus pour créer un dossier</string>
+    <string name="tutorial_slide_4_description">Suivez vos activités grâce à des statistiques avancées</string>
     <string name="tutorial_image">Tutorial\'s image</string>
     <string name="type">Type</string>
     <string name="validate">Validate</string>
